--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -7,7 +7,8 @@
 }
 
 body{
-    background-color: #fafafa;
+    background-color: #7e7373;
     font: 14px Arial, Helvetica, sans-serif;
     -webkit-font-smoothing: antialiased !important;
+
 }
