--- a/frontend/src/components/material.css
+++ b/frontend/src/components/material.css
@@ -1,16 +1,14 @@
-form#produto{
+form#material{
+    margin: 30px auto 0;
     display: flex;
-    margin-left: 30px;
-    justify-content: flex-start;
-    max-width: 380px;
-    margin-top: -50px;
+    flex-direction: column;
+    justify-content: flex-end;
+    max-width: 280px;
+    margin-right: 30px;
+    margin-top: 50px;
 }
 
-form#produto input {
-    margin-bottom: 10px;
-}
-
-form#produto input[type=text] {
+form#material input[type=text] {
     height: 38px;
     border-radius: 4px;
     border: 1px solid #ddd;
@@ -18,7 +16,11 @@ form#produto input[type=text] {
     font-size: 14px;
 }
 
-form#produto button {
+form#material input {
+    margin-top: 5px;
+}
+
+form#material button {
     padding: 10px 20px;
     border-radius: 4px;
     border: 0;
@@ -27,4 +29,5 @@ form#produto button {
     font-size: 14px;
     font-weight: bold;
     cursor: pointer;
+    margin-top: 5px;
 }
