--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    background-color: #7e7373;
+    background-color: #000000;
     font: 14px Arial, Helvetica, sans-serif;
     -webkit-font-smoothing: antialiased !important;
 
