--- a/frontend/src/components/main.css
+++ b/frontend/src/components/main.css
@@ -1,6 +1,6 @@
 section#post-list{
     width: 100%;
-    max-width: 580px;
+    max-width: 800px;
     height: 500px;
     margin: 0 auto;
     padding: 0 30px;
@@ -8,15 +8,26 @@ section#post-list{
     overflow-y: scroll;
 }
 
-section#post-list article header {
-    padding: 10px;
+section#post-list article {
     display: flex;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    
+    justify-content: space-between;
+
 }
 
-section#post-list article header span {
-    padding: 5px;
+.post-produtos {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid black;
+    width: 350px;
+    height: 30px;
+    padding: 0 5px 0px 5px;
 }
 
+.post-produtos button{
+    display: flex;
+    align-items: flex-end;
+    cursor: pointer;
+}
